Fix small loader in table on tablet resolution

--- a/src/styles/loader.css
+++ b/src/styles/loader.css
@@ -4,7 +4,7 @@
   right: 40px;
 }
 
-@media (max-width: 1024px) and (orientation: portrait) {
+@media (max-width: 1280px) {
   .loader {
     position: fixed !important;
     top: 5px !important;
